--- a/src/components/Navi/Navi.css
+++ b/src/components/Navi/Navi.css
@@ -1,33 +1,68 @@
 .main-view .Navi {
   position: absolute;
-  top: 50%;
+  top: 30%;
   left: 50%;
-  transform: translate(-50%, -50%); }
+  transition: .7s; }
 
 .main-view .Navi .navi-blue-bell {
   height: 80px;
   width: 80px;
   border-radius: 50%;
-  background-color: #2b72e5;
+  background-color: rgba(40, 100, 240, 0.76);
   position: absolute;
-  animation: spin 2s linear infinite;
-  transform-origin: 48% 53%; }
+  animation: float-body 3s linear infinite;
+  transform-origin: 48% 51%; }
 
 .main-view .Navi .navi-small-dust {
-  height: 20px;
-  width: 20px;
   border-radius: 50%;
   position: absolute; }
 
 .main-view .Navi .navi-small-dust--red {
-  background-color: rgba(1, 1, 0, 0.5);
-  transform: translate(-50%, -50%); }
+  height: 32px;
+  width: 32px;
+  background-color: rgba(200, 25, 101, 0.5);
+  transform-origin: 38% 70%;
+  animation: float-red 4s linear infinite reverse; }
 
 .main-view .Navi .navi-small-dust--yellow {
-  background-color: #f7f13d; }
+  height: 24px;
+  width: 24px;
+  background-color: rgba(240, 240, 20, 0.7);
+  transform-origin: 68% 30%;
+  animation: float-yellow 5s linear infinite reverse; }
 
-@keyframes spin {
+@keyframes float-red {
   0% {
-    transform: rotate(0deg); }
+    transform: translate(-50%, -50%) translate(-10px, 40px) rotate(0deg); }
   100% {
-    transform: rotate(360deg); } }
+    transform: translate(-50%, -50%) translate(-10px, 40px) rotate(360deg); } }
+
+@keyframes float-yellow {
+  0% {
+    transform: translate(-50%, -50%) translate(30px, 20px) rotate(0deg); }
+  100% {
+    transform: translate(-50%, -50%) translate(30px, 20px) rotate(360deg); } }
+
+@keyframes float-body {
+  0% {
+    transform: translate(-50%, -50%) scale(1) rotate(0deg); }
+  50% {
+    transform: translate(-50%, -50%) scale(1.05) rotate(180deg); }
+  100% {
+    transform: translate(-50%, -50%) scale(1) rotate(360deg); } }
+
+@keyframes morph {
+  0% {
+    transform: skew(0); }
+  50% {
+    transform: skew(20px); }
+  100% {
+    transform: skew(0%); } }
+
+@keyframes shrink {
+  0% {
+    transform: scale(1); }
+  50% {
+    transform: scale(0.85); }
+  100% {
+    transform: scale(1); } }
