--- a/src/components/Navi/Navi.sass
+++ b/src/components/Navi/Navi.sass
@@ -6,31 +6,72 @@ $navi-size: 80px
 .main-view
   .Navi
     position: absolute
-    top: 50%
+    top: 30%
     left: 50%
-    transform: translate(-50%, -50%)
+    // transform: translate(-50%, -50%)
+    transition: .7s
     .navi-blue-bell
       height: $navi-size
       width: $navi-size
       border-radius: 50%
-      background-color: #2b72e5
+      background-color: rgba(40, 100, 240, 0.76)
       position: absolute
-      animation: spin 2s linear infinite
-      transform-origin: 48% 53%
+      animation: float-body 3s linear infinite
+      transform-origin: 48% 51%
     .navi-small-dust
-      height: $navi-size/4
-      width: $navi-size/4
       border-radius: 50%
       position: absolute
       &--red
         // background-color: #f74a6c
-        background-color: rgba(0.7, 0.5, 0.1, 0.5)
-        transform: translate(-50%, -50%)
+        height: $navi-size*0.4
+        width: $navi-size*0.4
+        background-color: rgba(200, 25, 101, 0.5)
+        transform-origin: 38% 70%
+        animation: float-red 4s linear infinite reverse
       &--yellow
-        background-color: #f7f13d
+        height: $navi-size*0.3
+        width: $navi-size*0.3
+        background-color: rgba(240, 240, 20, 0.7)
+        transform-origin: 68% 30%
+        animation: float-yellow 5s linear infinite reverse
+    // &:hover
+    //   top: 30%
 
-@keyframes spin
+@keyframes float-red
   0%
-    transform: rotate(0deg)
+    transform: translate(-50%, -50%) translate(-10px, 40px) rotate(0deg)
   100%
-    transform: rotate(360deg)
+    transform: translate(-50%, -50%) translate(-10px, 40px) rotate(360deg)
+
+@keyframes float-yellow
+  0%
+    transform: translate(-50%, -50%) translate(30px, 20px) rotate(0deg)
+  100%
+    transform: translate(-50%, -50%) translate(30px, 20px) rotate(360deg)
+
+
+@keyframes float-body
+  0%
+    transform: translate(-50%, -50%) scale(1) rotate(0deg)
+  50%
+    transform: translate(-50%, -50%) scale(1.05) rotate(180deg)
+  100%
+    transform: translate(-50%, -50%) scale(1) rotate(360deg)
+
+@keyframes morph
+  0%
+    transform: skew(0)
+  50%
+    transform: skew(20px)
+  100%
+    transform: skew(0%)
+
+
+
+@keyframes shrink
+  0%
+    transform: scale(1)
+  50%
+    transform: scale(0.85)
+  100%
+    transform: scale(1)
