--- a/src/components/BorderLine/BorderLine.css
+++ b/src/components/BorderLine/BorderLine.css
@@ -1,11 +1,8 @@
-.main-view {
-  text-align: center; }
-  .main-view .BorderLine {
-    border: 2px solid white;
-    border-radius: 2px;
-    position: absolute;
-    left: 50%;
-    top: 44%;
-    transform: translate(-50%, -50%);
-    width: 500px;
-    box-shadow: 0px 10px 20px rgba(100, 100, 100, 0.7); }
+.main-view .BorderLine {
+  height: 40px;
+  color: white;
+  border: 4px solid white;
+  border-radius: 2px;
+  width: 500px;
+  margin: 0 auto;
+  box-shadow: 0px 30px 30px -20px rgba(100, 100, 100, 0.7); }
