--- a/src/components/BorderLine/BorderLine.sass
+++ b/src/components/BorderLine/BorderLine.sass
@@ -3,13 +3,11 @@ $line-color: rgba(255, 255, 255, 1)
 $shadow-color: rgba(100, 100, 100, .7)
 
 .main-view
-  text-align: center
   .BorderLine
-    border: 2px solid $line-color
+    height: 40px
+    color: $line-color
+    border: 4px solid $line-color
     border-radius: 2px
-    position: absolute
-    left: 50%
-    top: 44%
-    transform: translate(-50%, -50%)
     width: $border-width
-    box-shadow: 0px 10px 20px $shadow-color
+    margin: 0 auto
+    box-shadow: 0px 30px 30px -20px $shadow-color
