--- a/src/components/Navi/Navi.css
+++ b/src/components/Navi/Navi.css
@@ -1,21 +1,21 @@
 .main-view .Navi {
-  position: absolute;
-  top: 30%;
-  left: 50%;
-  transition: .7s; }
+  text-align: center;
+  transition: .7s;
+  width: 80px;
+  margin: 20vh auto 0 auto; }
 
 .main-view .Navi .navi-blue-bell {
   height: 80px;
   width: 80px;
   border-radius: 50%;
   background-color: rgba(40, 100, 240, 0.76);
-  position: absolute;
+  position: relative;
   animation: float-body 3s linear infinite;
   transform-origin: 48% 51%; }
 
 .main-view .Navi .navi-small-dust {
   border-radius: 50%;
-  position: absolute; }
+  position: relative; }
 
 .main-view .Navi .navi-small-dust--red {
   height: 32px;
@@ -33,23 +33,23 @@
 
 @keyframes float-red {
   0% {
-    transform: translate(-50%, -50%) translate(-10px, 40px) rotate(0deg); }
+    transform: translate(20px, -60px) translate(-10px, 40px) rotate(0deg); }
   100% {
-    transform: translate(-50%, -50%) translate(-10px, 40px) rotate(360deg); } }
+    transform: translate(20px, -60px) translate(-10px, 40px) rotate(360deg); } }
 
 @keyframes float-yellow {
   0% {
-    transform: translate(-50%, -50%) translate(30px, 20px) rotate(0deg); }
+    transform: translate(70%, -550%) translate(30px, 20px) rotate(0deg); }
   100% {
-    transform: translate(-50%, -50%) translate(30px, 20px) rotate(360deg); } }
+    transform: translate(70%, -550%) translate(30px, 20px) rotate(360deg); } }
 
 @keyframes float-body {
   0% {
-    transform: translate(-50%, -50%) scale(1) rotate(0deg); }
+    transform: scale(1) rotate(0deg); }
   50% {
-    transform: translate(-50%, -50%) scale(1.05) rotate(180deg); }
+    transform: scale(1.05) rotate(180deg); }
   100% {
-    transform: translate(-50%, -50%) scale(1) rotate(360deg); } }
+    transform: scale(1) rotate(360deg); } }
 
 @keyframes morph {
   0% {
