input field component structure

--- a/src/components/QueryField/QueryField.sass
+++ b/src/components/QueryField/QueryField.sass
@@ -1,8 +1,14 @@
 .main-view
   .QueryField
+    width: 100%
+    margin: 10vh auto
+    text-align: center
     input
-      border: 1px solid rgba(30, 30, 30, .3)
-      border-radius: 20px
-      width: 200px
-      font-size: 1em
+      // border: 1px solid rgba(30, 30, 30, .3)
+      border: none
+      border-bottom: 4px solid rgba(30, 30, 30, .3)
+      outline: none
+      width: 30%
+      font-size: 1.5em
       padding-left: 10px
+      color: rgba(30, 30, 30, .7)
