--- a/src/components/QueryField/QueryField.css
+++ b/src/components/QueryField/QueryField.css
@@ -1,6 +1,12 @@
-.main-view .QueryField input {
-  border: 1px solid rgba(30, 30, 30, 0.3);
-  border-radius: 20px;
-  width: 200px;
-  font-size: 1em;
-  padding-left: 10px; }
+.main-view .QueryField {
+  width: 100%;
+  margin: 10vh auto;
+  text-align: center; }
+  .main-view .QueryField input {
+    border: none;
+    border-bottom: 4px solid rgba(30, 30, 30, 0.3);
+    outline: none;
+    width: 30%;
+    font-size: 1.5em;
+    padding-left: 10px;
+    color: rgba(30, 30, 30, 0.7); }
