--- a/src/utilities/fonts.sass
+++ b/src/utilities/fonts.sass
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Fredoka+One')
-@import url('https://fonts.googleapis.com/css?family=Ubuntu')
+@import url('https://fonts.googleapis.com/css?family=Julius+Sans+One')
+
 
 body
   font-family: 'Fredoka One', cursive
