--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,2 +1,16 @@
+@import url("https://fonts.googleapis.com/css?family=Fredoka+One");
+@import url("https://fonts.googleapis.com/css?family=Julius+Sans+One");
+body {
+  font-family: 'Fredoka One', cursive; }
+
+@font-face {
+  font-family: 'Aileron';
+  src: url("Aileron/Aileron-Light.ttf") format("truetype"); }
+
 .main-view .Logo {
-  text-align: center; }
+  margin-top: 1vh;
+  font-family: "Aileron", sans-serif;
+  width: 100%;
+  text-align: center;
+  font-size: 4em;
+  color: #2675de; }
