--- a/src/components/QueryField/QueryField.sass
+++ b/src/components/QueryField/QueryField.sass
@@ -1,14 +1,34 @@
+@import '../../utilities/placeholders'
+@import '../../utilities/palette.sass'
+
 .main-view
   .QueryField
     width: 100%
-    margin: 10vh auto
+    position: absolute
+    top: 50%
+    left: 50%
+    transform: translate(-50%, -50%)
     text-align: center
     input
-      // border: 1px solid rgba(30, 30, 30, .3)
       border: none
-      border-bottom: 4px solid rgba(30, 30, 30, .3)
+      border-bottom: 4px solid $navi-dark
+      background-color: rgba(0, 0, 0, 0)
       outline: none
       width: 30%
       font-size: 1.5em
       padding-left: 10px
-      color: rgba(30, 30, 30, .7)
+      color: $white
+    button
+      color: $white
+      font-size: 1.5em
+      text-transform: lowercase
+      border: none
+      display: block
+      background-color: rgba(0, 0, 0, 0)
+      text-align: center
+
+      width: 50px
+      height: 50px
+      margin: 10px auto
+      &:hover
+        cursor: pointer
