--- a/src/components/Navi/Navi.sass
+++ b/src/components/Navi/Navi.sass
@@ -32,9 +32,9 @@ $navi-size: 40px
       animation: glowing-body 1.5s infinite
   .loading
     .navi-outer
-      animation: emitting-power 1s infinite
+      animation: emitting-power .3s infinite
     .navi-inner
-      animation: glowing-body .5s infinite
+      animation: glowing-body .2s infinite
 
 @keyframes change-color
   0%
