--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -1,25 +1,33 @@
 .map .button-wrapper {
   display: flex;
   justify-content: flex-end;
-  padding: 0 1.5rem 0.5rem; }
+  padding: 0 1.5rem; }
 
 .map .button {
-  padding: 1rem 0.5rem;
-  color: #666;
-  background: transparent; }
+  color: #232221;
+  background: transparent;
+  transition: .3s;
+  border: none;
+  outline: none;
+  margin-top: -10px; }
+
+.map .button:hover {
+  cursor: pointer; }
 
 .map .icon {
   margin-top: 0.3rem;
-  cursor: pointer; }
+  cursor: pointer;
+  margin-top: -10px; }
 
 .map-wrapper-hidden,
 .map-wrapper-expanded {
-  overflow: hidden; }
+  overflow: hidden;
+  padding: 0 20px; }
 
 .map-wrapper-hidden {
   height: 0;
   transition: height 0.3s ease-out; }
 
 .map-wrapper-expanded {
-  height: 15rem;
+  height: 10rem;
   transition: height 0.3s ease-out; }
