--- a/src/components/PlaceInfo/PlaceInfo.css
+++ b/src/components/PlaceInfo/PlaceInfo.css
@@ -1,12 +1,47 @@
 @import url("https://fonts.googleapis.com/css?family=Fredoka+One");
 @import url("https://fonts.googleapis.com/css?family=Julius+Sans+One");
 body {
-  font-family: 'Fredoka One', cursive; }
+  font-family: 'Aileron', cursive; }
 
-.main-view .PlaceInfo {
+.main-view .PlaceInfo .place {
+  color: #efefef;
+  font-size: 1.5em;
   width: 100%;
   position: absolute;
   top: 70%;
   left: 50%;
   transform: translate(-50%, -50%);
-  text-align: center; }
+  text-align: center;
+  transition: .3s;
+  width: 500px;
+  background-color: #232322;
+  padding: 10px 0;
+  border-radius: 4px;
+  box-shadow: 0px 8px 5px rgba(0, 0, 0, 0.12), 0 2px 3px rgba(0, 0, 0, 0.34);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1); }
+
+.main-view .PlaceInfo .place:hover {
+  cursor: pointer; }
+
+.main-view .PlaceInfo .place:hover .map .button-wrapper .button {
+  transition: .7s;
+  color: #bcbcbc; }
+
+@media screen and (max-width: 700px) {
+  .main-view .PlaceInfo .place {
+    width: 300px; } }
+
+.main-view .PlaceInfo .place:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22); }
+
+.main-view .PlaceInfo .place .name {
+  text-align: left;
+  padding-left: 30px; }
+
+.main-view .PlaceInfo .place .address {
+  text-align: left;
+  padding-left: 30px;
+  font-size: .8em;
+  color: #bcbcbc;
+  margin-top: -8px;
+  overflow: hidden; }
