--- a/src/components/PlaceInfo/PlaceInfo.sass
+++ b/src/components/PlaceInfo/PlaceInfo.sass
@@ -1,11 +1,43 @@
 @import '../../utilities/placeholders.sass'
 @import '../../utilities/palette.sass'
 
+
 .main-view
   .PlaceInfo
-    width: 100%
-    position: absolute
-    top: 70%
-    left: 50%
-    transform: translate(-50%, -50%)
-    text-align: center
+    .place
+      color: $white
+      font-size: 1.5em
+      width: 100%
+      position: absolute
+      top: 70%
+      left: 50%
+      transform: translate(-50%, -50%)
+      text-align: center
+      transition: .3s
+      width: 500px
+      background-color: $setting-light
+      padding: 10px 0
+      &:hover
+        cursor: pointer
+        .map
+          .button-wrapper
+            .button
+              transition: .7s
+              color: $grey
+      @media screen and (max-width: 700px)
+        width: 300px
+      border-radius: 4px
+      box-shadow: 0px 8px 5px rgba(0,0,0,0.12), 0 2px 3px rgba(0,0,0,0.34)
+      transition: all 0.3s cubic-bezier(.25,.8,.25,1)
+      &:hover
+        box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22)
+      .name
+        text-align: left
+        padding-left: 30px
+      .address
+        text-align: left
+        padding-left: 30px
+        font-size: .8em
+        color: $grey
+        margin-top: -8px
+        overflow: hidden
