--- a/src/components/Rating/Rating.css
+++ b/src/components/Rating/Rating.css
@@ -3,11 +3,7 @@
   text-align: left;
   padding-left: 1.8rem;
   margin-bottom: 0.5rem;
-  color: #d03140; }
-
-.rating span {
-  font-size: 1.4em;
-  margin-right: 1rem; }
+  color: #2675de; }
 
 .rating img {
   width: 2rem;
