--- a/src/components/Rating/Rating.sass
+++ b/src/components/Rating/Rating.sass
@@ -1,13 +1,11 @@
+@import '../../utilities/palette.sass'
+
 .rating
   display: flex
   text-align: left
   padding-left: 1.8rem
   margin-bottom: 0.5rem
-  color: #d03140
-
-.rating span
-  font-size: 1.4em
-  margin-right: 1rem
+  color: $navi-primary  
 
 .rating img
   width: 2rem
