--- a/src/components/RegisterForm/RegisterForm.css
+++ b/src/components/RegisterForm/RegisterForm.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Fredoka+One");
 @import url("https://fonts.googleapis.com/css?family=Julius+Sans+One");
 body {
-  font-family: 'Fredoka One', cursive; }
+  font-family: 'Aileron', cursive; }
 
 .RegisterForm div {
   font-family: 'Ubuntu', sans-sans-serif;
