--- a/src/utilities/fonts.css
+++ b/src/utilities/fonts.css
@@ -1,4 +1,4 @@
 @import url("https://fonts.googleapis.com/css?family=Fredoka+One");
 @import url("https://fonts.googleapis.com/css?family=Julius+Sans+One");
 body {
-  font-family: 'Fredoka One', cursive; }
+  font-family: 'Aileron', cursive; }
