--- a/src/components/PlaceInfo/PlaceInfo.css
+++ b/src/components/PlaceInfo/PlaceInfo.css
@@ -4,13 +4,10 @@ body {
   font-family: 'Aileron', cursive; }
 
 .main-view .PlaceInfo .place {
+  margin: 0 auto;
   color: #efefef;
   font-size: 1.5em;
   width: 100%;
-  position: absolute;
-  top: 70%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   text-align: center;
   transition: .3s;
   width: 500px;
