--- a/src/components/PlaceInfo/PlaceInfo.sass
+++ b/src/components/PlaceInfo/PlaceInfo.sass
@@ -5,13 +5,10 @@
 .main-view
   .PlaceInfo
     .place
+      margin: 0 auto
       color: $white
       font-size: 1.5em
       width: 100%
-      position: absolute
-      top: 70%
-      left: 50%
-      transform: translate(-50%, -50%)
       text-align: center
       transition: .3s
       width: 500px
