--- a/src/components/SpeechBalloon/SpeechBalloon.css
+++ b/src/components/SpeechBalloon/SpeechBalloon.css
@@ -4,20 +4,34 @@ body {
   font-family: 'Aileron', cursive; }
 
 .SpeechBalloon div {
-  font-family: 'Ubuntu', sans-sans-serif;
-  color: #efefef;
-  font-size: 1.5em; }
+  margin: 40px auto;
+  text-align: right;
+  width: 500px;
+  transition: .3s; }
 
-.SpeechBalloon div {
+@media screen and (max-width: 700px) {
+  .SpeechBalloon div {
+    width: 300px; } }
+
+.SpeechBalloon div div {
+  color: #efefef;
+  font-size: 1.5em;
   text-align: center;
-  position: absolute;
-  left: 29%;
-  top: 10%;
-  width: 200px;
-  height: 100px;
-  border-radius: 40px;
-  background-color: #295b98;
-  color: #efefef; }
+  margin-right: 5%;
+  width: 56%;
+  height: 60px;
+  line-height: 60px;
+  transition: .3s;
+  background-color: #e01f4f;
+  border-radius: 4px;
+  box-shadow: 0px 8px 5px rgba(0, 0, 0, 0.12), 0 2px 3px rgba(0, 0, 0, 0.34);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1); }
+
+@media screen and (max-width: 700px) {
+  .SpeechBalloon div div {
+    width: 50%;
+    background-color: transparent;
+    color: #e01f4f; } }
 
 .SpeechBalloon .appear {
   animation: pop-up .7s; }
