--- a/src/components/SpeechBalloon/SpeechBalloon.sass
+++ b/src/components/SpeechBalloon/SpeechBalloon.sass
@@ -4,22 +4,34 @@
 
 .SpeechBalloon
   div
-    @extend %message
-    text-align: center
-    position: absolute
-    left: 29%
-    top: 10%
-    width: 200px
-    height: 100px
-    border-radius: 40px
-    background-color: $navi-dark
-    color: $white
+    margin: 40px auto
+    text-align: right
+    width: 500px
+    transition: .3s
+    @media screen and (max-width: 700px)
+      width: 300px
+    div
+      color: $white
+      font-size: 1.5em
+      text-align: center
+      margin-right: 5%
+      width: 56%
+      @media screen and (max-width: 700px)
+        width: 50%
+        background-color: rgba(0,0,0,0)
+        color: $balloon-red
+      height: 60px
+      line-height: 60px
+      transition: .3s
+      background-color: $balloon-red
+      border-radius: 4px
+      box-shadow: 0px 8px 5px rgba(0,0,0,0.12), 0 2px 3px rgba(0,0,0,0.34)
+      transition: all 0.3s cubic-bezier(.25,.8,.25,1)
   .appear
     animation: pop-up .7s
   .hidden
     opacity: 0
     transform: scale(0)
-
 
 @keyframes pop-up
   0%
