--- a/src/components/QueryField/QueryField.css
+++ b/src/components/QueryField/QueryField.css
@@ -4,6 +4,7 @@ body {
   font-family: 'Aileron', cursive; }
 
 .main-view .QueryField {
+  transition: .3s;
   text-align: center; }
 
 .main-view .QueryField input {
@@ -21,6 +22,9 @@ body {
   .main-view .QueryField input {
     width: 290px;
     padding-left: 10px; } }
+
+.main-view .QueryField .center {
+  margin-top: 200px; }
 
 .main-view .QueryField button {
   color: #efefef;
