--- a/src/components/QueryField/QueryField.sass
+++ b/src/components/QueryField/QueryField.sass
@@ -3,6 +3,7 @@
 
 .main-view
   .QueryField
+    transition: .3s
     text-align: center
     input
       border: none
@@ -17,6 +18,8 @@
         padding-left: 10px
       font-size: 1.5em
       color: $white
+    .center
+      margin-top: 200px
     button
       color: $white
       font-size: 1.5em
