dialogue positioning fix

--- a/src/components/Navi/Navi.sass
+++ b/src/components/Navi/Navi.sass
@@ -75,5 +75,10 @@ $navi-size: 40px
 @keyframes go-to-dialogue
   0%
     left: 50%
+    top: 23%
+  15%
+    left: 38%
+    top: 24%
   100%
     left: 33%
+    top: 23%
