--- a/src/components/Navi/Navi.css
+++ b/src/components/Navi/Navi.css
@@ -65,6 +65,11 @@
 
 @keyframes go-to-dialogue {
   0% {
-    left: 50%; }
+    left: 50%;
+    top: 23%; }
+  15% {
+    left: 38%;
+    top: 24%; }
   100% {
-    left: 33%; } }
+    left: 33%;
+    top: 23%; } }
