--- a/src/components/PlaceInfo/PlaceInfo.sass
+++ b/src/components/PlaceInfo/PlaceInfo.sass
@@ -5,6 +5,7 @@
 .main-view
   .PlaceInfo
     .place
+      animation: appear 1.5s
       margin: 0 auto
       color: $white
       font-size: 1.5em
@@ -38,3 +39,9 @@
         color: $grey
         margin-top: -8px
         overflow: hidden
+
+@keyframes appear
+  0%
+    opacity: 0
+  100%
+    opacity: 1
