--- a/src/components/QueryField/QueryField.sass
+++ b/src/components/QueryField/QueryField.sass
@@ -20,6 +20,13 @@
       color: $white
     .center
       margin-top: 200px
+    svg
+      cursor: pointer
+      margin-left: -40px
+      #circle
+        fill: $balloon-red
+      #mouse
+        fill: white
     button
       color: $white
       font-size: 1.5em
