balloon inline positioning

--- a/src/components/SpeechBalloon/SpeechBalloon.sass
+++ b/src/components/SpeechBalloon/SpeechBalloon.sass
@@ -11,13 +11,15 @@
     @media screen and (max-width: 700px)
       width: 300px
     div
+      display: inline
+      padding: 20px
       color: $white
       font-size: 1.5em
       text-align: center
       margin-right: 5%
-      width: 56%
+      max-width: 100%
       @media screen and (max-width: 700px)
-        width: 50%
+        max-width: 50%
         background-color: rgba(0,0,0,0)
         color: $balloon-red
       height: 60px
