--- a/src/components/SpeechBalloon/SpeechBalloon.css
+++ b/src/components/SpeechBalloon/SpeechBalloon.css
@@ -14,11 +14,13 @@ body {
     width: 300px; } }
 
 .SpeechBalloon div div {
+  display: inline;
+  padding: 20px;
   color: #efefef;
   font-size: 1.5em;
   text-align: center;
   margin-right: 5%;
-  width: 56%;
+  max-width: 100%;
   height: 60px;
   line-height: 60px;
   transition: .3s;
@@ -29,7 +31,7 @@ body {
 
 @media screen and (max-width: 700px) {
   .SpeechBalloon div div {
-    width: 50%;
+    max-width: 50%;
     background-color: transparent;
     color: #e01f4f; } }
 
