--- a/src/components/Navi/Navi.css
+++ b/src/components/Navi/Navi.css
@@ -21,8 +21,16 @@
 .main-view .dialogue .navi-outer {
   animation: go-to-dialogue 2s forwards, emitting-power 4s infinite; }
 
+@media screen and (max-width: 500px) {
+  .main-view .dialogue .navi-outer {
+    animation: hide 2s forwards; } }
+
 .main-view .dialogue .navi-inner {
   animation: go-to-dialogue 2s forwards, glowing-body 1.5s infinite; }
+
+@media screen and (max-width: 500px) {
+  .main-view .dialogue .navi-inner {
+    animation: hide 2s forwards; } }
 
 .main-view .idle .navi-outer {
   animation: emitting-power 4s infinite; }
@@ -68,8 +76,16 @@
     left: 50%;
     top: 23%; }
   15% {
-    left: 38%;
+    left: 40%;
     top: 24%; }
   100% {
-    left: 33%;
-    top: 23%; } }
+    left: 37%;
+    top: 25%; } }
+
+@keyframes hide {
+  from {
+    left: 37%;
+    top: 25%; }
+  to {
+    left: 20%;
+    top: 25%; } }
