text not overflowing mic

--- a/src/components/QueryField/QueryField.sass
+++ b/src/components/QueryField/QueryField.sass
@@ -11,8 +11,10 @@
       background-color: rgba(0, 0, 0, 0)
       outline: none
       transition: .3s
-      width: 470px
+      width: 420px
       padding-left: 30px
+      padding-right: 50px
+      overflow: hidden
       @media screen and (max-width: 700px)
         width: 290px
         padding-left: 10px
