--- a/src/components/QueryField/QueryField.css
+++ b/src/components/QueryField/QueryField.css
@@ -13,8 +13,10 @@ body {
   background-color: transparent;
   outline: none;
   transition: .3s;
-  width: 470px;
+  width: 420px;
   padding-left: 30px;
+  padding-right: 50px;
+  overflow: hidden;
   font-size: 1.5em;
   color: #efefef; }
 
