--- a/src/components/QueryField/QueryField.css
+++ b/src/components/QueryField/QueryField.css
@@ -30,13 +30,30 @@ body {
 
 .main-view .QueryField svg {
   cursor: pointer;
-  margin-left: -40px; }
+  margin-left: -40px;
+  transition: .3s; }
 
 .main-view .QueryField svg #circle {
   fill: #e01f4f; }
 
 .main-view .QueryField svg #mouse {
-  fill: white; }
+  transition: .3s;
+  fill: #efefef; }
+
+.main-view .QueryField svg:hover {
+  transform: scale(1.05); }
+
+.main-view .QueryField svg:hover #mouse {
+  fill: #e01f4f; }
+
+.main-view .QueryField svg:active {
+  transform: scale(0.9); }
+
+.main-view .QueryField .recording #circle {
+  fill: #efefef; }
+
+.main-view .QueryField .recording #mouse {
+  fill: #efefef; }
 
 .main-view .QueryField button {
   color: #efefef;
