--- a/src/components/QueryField/QueryField.sass
+++ b/src/components/QueryField/QueryField.sass
@@ -27,10 +27,11 @@
       margin-left: -40px
       transition: .3s
       #circle
-        fill: $balloon-red
+        transition: .3s
+        fill: $grey
       #mouse
         transition: .3s
-        fill: $white
+        fill: $grey
       &:hover
         transform: scale(1.05)
         #mouse
@@ -39,9 +40,11 @@
         transform: scale(.9)
     .recording
       #circle
-        fill: $white
+        transition: .3s
+        fill: $balloon-red
       #mouse
-        fill: $white
+        transition: .3s
+        fill: $balloon-red
 
     button
       color: $white
