--- a/src/components/SpeechBalloon/SpeechBalloon.css
+++ b/src/components/SpeechBalloon/SpeechBalloon.css
@@ -3,26 +3,25 @@
 body {
   font-family: 'Aileron', cursive; }
 
-.SpeechBalloon div {
+.SpeechBalloon .balloon-wrapper {
   margin: 40px auto;
   text-align: right;
   width: 500px;
   transition: .3s; }
 
 @media screen and (max-width: 700px) {
-  .SpeechBalloon div {
+  .SpeechBalloon .balloon-wrapper {
     width: 300px; } }
 
-.SpeechBalloon div div {
-  display: inline;
+.SpeechBalloon .balloon-wrapper div {
+  transition: .5s;
   padding: 20px;
   color: #efefef;
   font-size: 1.5em;
   text-align: center;
-  margin-right: 5%;
+  margin-left: 100px;
   max-width: 100%;
-  height: 60px;
-  line-height: 60px;
+  overflow: auto;
   transition: .3s;
   background-color: #e01f4f;
   border-radius: 4px;
@@ -30,7 +29,7 @@ body {
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1); }
 
 @media screen and (max-width: 700px) {
-  .SpeechBalloon div div {
+  .SpeechBalloon .balloon-wrapper div {
     max-width: 50%;
     background-color: transparent;
     color: #e01f4f; } }
