--- a/src/views/setting.sass
+++ b/src/views/setting.sass
@@ -1,6 +1,8 @@
 @import '../utilities/palette.sass'
+@import '../utilities/variables.sass'
 
 html
   width: 100%
   height: 100%
   background-color: $setting
+  margin: 0
