--- a/src/components/Navi/Navi.sass
+++ b/src/components/Navi/Navi.sass
@@ -32,11 +32,24 @@ $navi-size: 40px
       background-color: $white
       margin: auto
       border-radius: 50%
+      &:hover
+        cursor: pointer
+      &:active
+        transform: scale(0.8) !important
   .dialogue
     .navi-outer
       animation: emitting-power 4s infinite
     .navi-inner
       animation: glowing-body 1.5s infinite
+  .starting
+    .navi-outer
+      top: -120px
+      left: 50%
+      animation: starting-outer 4s infinite
+    .navi-inner
+      top: -120px
+      left: 50%
+      animation: starting-inner 1.5s infinite
   //klase zawierające konkretne animacje
   //idle jest to domyślna animacja
   .idle
@@ -47,9 +60,13 @@ $navi-size: 40px
   //animacja loader jest załączana, kiedy użytkownik czeka na odpowiedź
   .loading
     .navi-outer
-      animation: emitting-power .3s infinite
+      width: 10px
+      height: 10px
+      animation: loader-outer .3s infinite
     .navi-inner
-      animation: glowing-body .2s infinite
+      width: 10px
+      height: 10px
+      animation: loader-inner .2s infinite
   .recording
     .navi-outer
       transition: .3s
@@ -62,6 +79,19 @@ $navi-size: 40px
       background-color: $balloon-red
       animation: recording-inner 1.2s infinite
 
+
+@keyframes loader-inner
+  0%
+    transform: translate(-50%, 0%) rotate(0deg)
+  100%
+    transform: translate(-50%, 0%) rotate(360deg)
+
+@keyframes loader-outer
+  0%
+    transform: translate(50%, 0%) rotate(0deg)
+  100%
+    transform: translate(50%, 0%) rotate(360deg)
+
 //definicja animacji na podstawie konkretnych stanów w określonych punktach w czasie
 @keyframes glowing-body
   0%
@@ -70,6 +100,27 @@ $navi-size: 40px
     transform: translate(-50%, -50%) scale(1.1)
   100%
     transform: translate(-50%, -50%) scale(1)
+
+//definicja animacji na podstawie konkretnych stanów w określonych punktach w czasie
+@keyframes starting-inner
+  0%
+    transform: translate(-50%, -50%) scale(1)
+  50%
+    transform: translate(-50%, -50%) scale(1.1)
+  100%
+    transform: translate(-50%, -50%) scale(1)
+
+@keyframes starting-outer
+  0%
+    transform: translate(-50%, -50%) scale(0)
+    opacity: 0
+  10%
+    transform: translate(-50%, -50%) scale(0.2)
+    opacity: 1
+  100%
+    transform: translate(-50%, -50%) scale(2)
+    opacity: 0
+
 
 @keyframes emitting-power
   0%
